--- a/Project/2017_10_station_weather.ipynb
+++ b/Project/2017_10_station_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def daily_data_2017(station_name):\n",
@@ -232,61 +234,468 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "top_ten_station = ['PHL','DFW','BOS','JFK','IAH','DEN','LGA','ORD','EWR','SFO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['PHL', 'DFW', 'BOS', 'JFK', 'IAH', 'DEN', 'LGA', 'ORD', 'EWR', 'SFO']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:1: DeprecationWarning: 'U' mode is deprecated\n",
+      "  if __name__ == '__main__':\n",
+      "/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (48,77,84,85) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
     }
    ],
    "source": [
-    "top_ten_station"
+    "d = pd.read_csv(open(cur_path+'/Data2016_Uncleaned.csv','rU'), encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#d['Origin'].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PHL\n",
-      "DFW\n",
-      "BOS\n",
-      "JFK\n",
-      "IAH\n",
-      "DEN\n",
-      "LGA\n",
-      "ORD\n",
-      "EWR\n",
-      "SFO\n"
+      "1 DFW\n",
+      "2 DTW\n",
+      "3 SEA\n",
+      "4 JFK\n",
+      "5 SJC\n",
+      "6 ORD\n",
+      "7 PHX\n",
+      "8 STL\n",
+      "9 LAX\n",
+      "10 MCO\n",
+      "11 DEN\n",
+      "12 MIA\n",
+      "13 IAH\n",
+      "14 SLC\n",
+      "15 TUS\n",
+      "16 BOS\n",
+      "17 FLL\n",
+      "18 SFO\n",
+      "19 OGG\n",
+      "20 TPA\n",
+      "21 SNA\n",
+      "22 OKC\n",
+      "23 HNL\n",
+      "24 PHL\n",
+      "25 LGA\n",
+      "26 RDU\n",
+      "27 DCA\n",
+      "28 RIC\n",
+      "29 ATL\n",
+      "30 LBB\n",
+      "31 CLT\n",
+      "32 ELP\n",
+      "33 BNA\n",
+      "34 JAC\n",
+      "35 SMF\n",
+      "36 EWR\n",
+      "37 IAD\n",
+      "38 LIH\n",
+      "39 SJU\n",
+      "40 ABQ\n",
+      "41 ORF\n",
+      "42 JAX\n",
+      "43 MSY\n",
+      "44 MCI\n",
+      "45 GUC\n",
+      "46 IND\n",
+      "47 PDX\n",
+      "48 BWI\n",
+      "49 MSP\n",
+      "50 MKE\n",
+      "51 ONT\n",
+      "52 RSW\n",
+      "53 DSM\n",
+      "54 PSP\n",
+      "55 EGE\n",
+      "56 PBI\n",
+      "57 SDF\n",
+      "58 PIT\n",
+      "59 DAY\n",
+      "60 STX\n",
+      "61 COS\n",
+      "62 CMH\n",
+      "63 MTJ\n",
+      "64 HDN\n",
+      "65 BDL\n",
+      "66 MEM\n",
+      "67 CLE\n",
+      "68 HOU\n",
+      "69 OAK\n",
+      "70 GEG\n",
+      "71 ANC\n",
+      "72 BUF\n",
+      "73 SYR\n",
+      "74 ALB\n",
+      "75 PVD\n",
+      "76 ILM\n",
+      "77 ICT\n"
      ]
     }
    ],
    "source": [
+    "c=0\n",
     "for i in top_ten_station:\n",
-    "    print(i)\n",
+    "    c=c+1\n",
+    "    print(c,i)\n",
     "    daily_data_2017(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "266"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(top_ten_station)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "top_ten_station =['DFW',\n",
+    " 'DTW',\n",
+    " 'SEA',\n",
+    " 'JFK',\n",
+    " 'SJC',\n",
+    " 'ORD',\n",
+    " 'PHX',\n",
+    " 'STL',\n",
+    " 'LAX',\n",
+    " 'MCO',\n",
+    " 'DEN',\n",
+    " 'MIA',\n",
+    " 'IAH',\n",
+    " 'SLC',\n",
+    " 'TUS',\n",
+    " 'BOS',\n",
+    " 'FLL',\n",
+    " 'SFO',\n",
+    " 'OGG',\n",
+    " 'TPA',\n",
+    " 'SNA',\n",
+    " 'OKC',\n",
+    " 'HNL',\n",
+    " 'PHL',\n",
+    " 'LGA',\n",
+    " 'RDU',\n",
+    " 'DCA',\n",
+    " 'RIC',\n",
+    " 'ATL',\n",
+    " 'LBB',\n",
+    " 'CLT',\n",
+    " 'ELP',\n",
+    " 'BNA',\n",
+    " 'JAC',\n",
+    " 'SMF',\n",
+    " 'EWR',\n",
+    " 'IAD',\n",
+    " 'LIH',\n",
+    " 'SJU',\n",
+    " 'ABQ',\n",
+    " 'ORF',\n",
+    " 'JAX',\n",
+    " 'MSY',\n",
+    " 'MCI',\n",
+    " 'GUC',\n",
+    " 'IND',\n",
+    " 'PDX',\n",
+    " 'BWI',\n",
+    " 'MSP',\n",
+    " 'MKE',\n",
+    " 'ONT',\n",
+    " 'RSW',\n",
+    " 'DSM',\n",
+    " 'PSP',\n",
+    " 'EGE',\n",
+    " 'PBI',\n",
+    " 'SDF',\n",
+    " 'PIT',\n",
+    " 'DAY',\n",
+    " 'STX',\n",
+    " 'COS',\n",
+    " 'CMH',\n",
+    " 'MTJ',\n",
+    " 'HDN',\n",
+    " 'BDL',\n",
+    " 'MEM',\n",
+    " 'CLE',\n",
+    " 'HOU',\n",
+    " 'OAK',\n",
+    " 'GEG',\n",
+    " 'ANC',\n",
+    " 'BUF',\n",
+    " 'SYR',\n",
+    " 'ALB',\n",
+    " 'PVD',\n",
+    " 'ILM',\n",
+    " 'ICT',\n",
+    " 'PWM',\n",
+    " 'GSO',\n",
+    " 'CHS',\n",
+    " 'MDT',\n",
+    " 'BHM',\n",
+    " 'ADQ',\n",
+    " 'BRW',\n",
+    " 'SCC',\n",
+    " 'JNU',\n",
+    " 'KTN',\n",
+    " 'YAK',\n",
+    " 'CDV',\n",
+    " 'PSG',\n",
+    " 'WRG',\n",
+    " 'OME',\n",
+    " 'OTZ',\n",
+    " 'BUR',\n",
+    " 'ADK',\n",
+    " 'SWF',\n",
+    " 'LGB',\n",
+    " 'PSE',\n",
+    " 'BQN',\n",
+    " 'HPN',\n",
+    " 'SAV',\n",
+    " 'SRQ',\n",
+    " 'BTV',\n",
+    " 'ORH',\n",
+    " 'CVG',\n",
+    " 'BIS',\n",
+    " 'AVL',\n",
+    " 'GRR',\n",
+    " 'FNT',\n",
+    " 'MYR',\n",
+    " 'JAN',\n",
+    " 'FAR',\n",
+    " 'PNS',\n",
+    " 'AGS',\n",
+    " 'LEX',\n",
+    " 'DAL',\n",
+    " 'ATW',\n",
+    " 'GPT',\n",
+    " 'MLB',\n",
+    " 'BZN',\n",
+    " 'CHO',\n",
+    " 'MSN',\n",
+    " 'EYW',\n",
+    " 'TRI',\n",
+    " 'LFT',\n",
+    " 'ROA',\n",
+    " 'ECP',\n",
+    " 'VPS',\n",
+    " 'XNA',\n",
+    " 'EVV',\n",
+    " 'AVP',\n",
+    " 'MDW',\n",
+    " 'HSV',\n",
+    " 'FAY',\n",
+    " 'TYS',\n",
+    " 'TLH',\n",
+    " 'MSO',\n",
+    " 'TTN',\n",
+    " 'UST',\n",
+    " 'PHF',\n",
+    " 'FSD',\n",
+    " 'LBE',\n",
+    " 'BMI',\n",
+    " 'CRW',\n",
+    " 'PPG',\n",
+    " 'IAG',\n",
+    " 'ACT',\n",
+    " 'SHV',\n",
+    " 'FSM',\n",
+    " 'MAF',\n",
+    " 'SAF',\n",
+    " 'JLN',\n",
+    " 'LRD',\n",
+    " 'BRO',\n",
+    " 'TYR',\n",
+    " 'GJT',\n",
+    " 'DLH',\n",
+    " 'SBA',\n",
+    " 'ASE',\n",
+    "'IDA',\n",
+    " 'RAP',\n",
+    " 'FCA',\n",
+    " 'LNK',\n",
+    " 'AMA',\n",
+    " 'BFL',\n",
+    " 'MLI',\n",
+    " 'LSE',\n",
+    " 'SBN',\n",
+    " 'PSC',\n",
+    " 'FLG',\n",
+    " 'ISN',\n",
+    " 'GFK',\n",
+    " 'GTF',\n",
+    " 'MRY',\n",
+    " 'MBS',\n",
+    " 'SUN',\n",
+    " 'TWF',\n",
+    " 'SGF',\n",
+    " 'CPR',\n",
+    " 'BTR',\n",
+    " 'PBG',\n",
+    " 'CRP',\n",
+    " 'CID',\n",
+    " 'SBP',\n",
+    " 'RKS',\n",
+    " 'CMX',\n",
+    " 'MMH',\n",
+    " 'PLN',\n",
+    " 'EKO',\n",
+    " 'GCC',\n",
+    " 'MFR',\n",
+    " 'SMX',\n",
+    " 'EUG',\n",
+    " 'RST',\n",
+    " 'TVC',\n",
+    " 'SPI',\n",
+    " 'SGU',\n",
+    " 'HLN',\n",
+    " 'RDM',\n",
+    " 'ACV',\n",
+    " 'EAU',\n",
+    " 'DVL',\n",
+    " 'JMS',\n",
+    " 'MKG',\n",
+    " 'HYS',\n",
+    " 'COD',\n",
+    " 'ITH',\n",
+    " 'APN',\n",
+    " 'ESC',\n",
+    " 'BJI',\n",
+    " 'MQT',\n",
+    " 'BGM',\n",
+    " 'RHI',\n",
+    " 'LWS',\n",
+    " 'IMT',\n",
+    " 'BRD',\n",
+    " 'INL',\n",
+    " 'PIH',\n",
+    " 'GUM',\n",
+    " 'HIB',\n",
+    " 'BTM',\n",
+    " 'CDC',\n",
+    " 'OTH',\n",
+    " 'RDD',\n",
+    " 'HRL',\n",
+    " 'ISP',\n",
+    " 'MHT',\n",
+    " 'GNV',\n",
+    " 'MEI',\n",
+    " 'PIB',\n",
+    " 'BPT',\n",
+    " 'AEX',\n",
+    " 'TXK',\n",
+    " 'ROW',\n",
+    " 'CLL',\n",
+    " 'HOB',\n",
+    " 'LCH',\n",
+    " 'OAJ',\n",
+    " 'ELM',\n",
+    " 'VLD',\n",
+    " 'MGM',\n",
+    " 'BGR',\n",
+    " 'GTR',\n",
+    " 'CSG',\n",
+    " 'BQK',\n",
+    " 'DHN',\n",
+    " 'EWN',\n",
+    " 'ABY',\n",
+    " 'SPS',\n",
+    " 'SJT',\n",
+    " 'GGG',\n",
+    " 'ACK',\n",
+    " 'MVY',\n",
+    " 'HYA',\n",
+    " 'BFF',\n",
+    " 'GST',\n",
+    " 'AKN',\n",
+    " 'DLG',\n",
+    " 'GCK',\n",
+    " 'MHK',\n",
+    " 'ABI',\n",
+    " 'GRI',\n",
+    " 'EFD',\n",
+    " 'PGD',\n",
+    " 'SPN',\n",
+    " 'ENV']\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Reject = ['KOA','AUS','LAS','STT','SAN','SAT','TUL','RNO','MFE','OMA','FAT','BOI','ROC','BET','FAI','SIT','BLI','DAB','BIL','GSP',\n",
+    "'CAK','LIT','CHA','MOB',\"CAE\",'ITO','ABE','ACY','MLU','GRK','YUM','GRB', 'DRO','MOT','FWA','PIA','AZO','PAH','ABR',\n",
+    "'CIU','LAR','LAW','ERI','SCE','CWA','WYS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Reject)"
    ]
   },
   {
@@ -300,8 +709,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
