modify weather data

--- a/Project/Combining_Data.ipynb
+++ b/Project/Combining_Data.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Read in the flight delay and concatinate it\n",
@@ -176,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dt_both = dt_both[dt_both.Dest.isin(airport)]"
@@ -245,13 +249,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_weather = pd.read_csv(cur_path+'WeatherData.csv', low_memory=False)"
+    "df_weather2016 = pd.read_csv(cur_path+'/weatherdata/weatherdata2016.csv', low_memory=False)\n",
+    "df_weather2017 = pd.read_csv(cur_path+'/weatherdata/weatherdata2017.csv', low_memory=False)\n",
+    "df_weather = pd.concat([df_weather2016,df_weather2017])"
    ]
   },
   {
@@ -437,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "final_combined.OriginVisibility = final_combined.OriginVisibility.fillna(mode_vis)\n",
@@ -717,7 +725,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp =final_combined[['Year','Month','DayofMonth', 'Origin', 'Dest','OriginVisibility', 'OriginWind', 'OriginPrecip', 'DestinationVisibility', 'DestinationWind', 'DestinationPrecip']]"
