modify weather data

--- a/Project/Combining_Data.ipynb
+++ b/Project/Combining_Data.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +231,33 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dt_both.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8058380"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dt_both)"
    ]
   },
   {
@@ -249,23 +269,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_weather2016 = pd.read_csv(cur_path+'/weatherdata/weatherdata2016.csv', low_memory=False)\n",
-    "df_weather2017 = pd.read_csv(cur_path+'/weatherdata/weatherdata2017.csv', low_memory=False)\n",
-    "df_weather = pd.concat([df_weather2016,df_weather2017])"
+    "df_weather = pd.read_csv(cur_path+'/WeatherData.csv', low_memory=False)\n",
+    "#df_weather2017 = pd.read_csv(cur_path+'/weatherdata/weatherdata2017.csv', low_memory=False)\n",
+    "#df_weather = pd.concat([df_weather2016,df_weather2017])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_weather_origin = df_weather[['station', 'Year', 'Month', 'DayofMonth', 'Visibility', 'Wind', 'Precip']]\n",
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -293,38 +309,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = dt_both.merge(df_weather_origin.drop_duplicates(subset=['Origin', 'Year','Month', 'DayofMonth']), how='left',on=['Origin', 'Year','Month', 'DayofMonth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "result = pd.merge(dt_both, df_weather_origin, how='left',on=['Origin', 'Year','Month', 'DayofMonth'])"
+    "final_combined = result.merge(df_weather_dest.drop_duplicates(subset=['Dest', 'Year','Month', 'DayofMonth']), on=['Dest', 'Year','Month', 'DayofMonth'], how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "final_combined = pd.merge(result, df_weather_dest, on=['Dest', 'Year','Month', 'DayofMonth'], how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9151051"
+       "8058380"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,56 +356,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ActualElapsedTime        0\n",
-       "AirlineID                0\n",
-       "ArrDelayMinutes          0\n",
-       "ArrTime                  0\n",
-       "ArrivalDelayGroups       0\n",
-       "CRSArrTime               0\n",
-       "CRSDepTime               0\n",
-       "CRSElapsedTime           0\n",
-       "DayOfWeek                0\n",
-       "DayofMonth               0\n",
-       "DepDelayMinutes          0\n",
-       "DepTime                  0\n",
-       "DepartureDelayGroups     0\n",
-       "Dest                     0\n",
-       "DestAirportID            0\n",
-       "DestCityMarketID         0\n",
-       "DestCityName             0\n",
-       "DestState                0\n",
-       "DestStateName            0\n",
-       "Distance                 0\n",
-       "DivAirportLandings       1\n",
-       "FlightNum                0\n",
-       "Month                    0\n",
-       "Origin                   0\n",
-       "OriginAirportID          0\n",
-       "OriginCityName           0\n",
-       "OriginStateName          0\n",
-       "Quarter                  0\n",
-       "TaxiIn                   0\n",
-       "TaxiOut                  0\n",
-       "UniqueCarrier            0\n",
-       "WheelsOff                0\n",
-       "WheelsOn                 0\n",
-       "Year                     0\n",
-       "OriginVisibility         3\n",
-       "OriginWind               3\n",
-       "OriginPrecip             3\n",
-       "DestinationVisibility    0\n",
-       "DestinationWind          0\n",
-       "DestinationPrecip        0\n",
+       "ActualElapsedTime              0\n",
+       "AirlineID                      0\n",
+       "ArrDelayMinutes                0\n",
+       "ArrTime                        0\n",
+       "ArrivalDelayGroups             0\n",
+       "CRSArrTime                     0\n",
+       "CRSDepTime                     0\n",
+       "CRSElapsedTime                 0\n",
+       "DayOfWeek                      0\n",
+       "DayofMonth                     0\n",
+       "DepDelayMinutes                0\n",
+       "DepTime                        0\n",
+       "DepartureDelayGroups           0\n",
+       "Dest                           0\n",
+       "DestAirportID                  0\n",
+       "DestCityMarketID               0\n",
+       "DestCityName                   0\n",
+       "DestState                      0\n",
+       "DestStateName                  0\n",
+       "Distance                       0\n",
+       "DivAirportLandings             1\n",
+       "FlightNum                      0\n",
+       "Month                          0\n",
+       "Origin                         0\n",
+       "OriginAirportID                0\n",
+       "OriginCityName                 0\n",
+       "OriginStateName                0\n",
+       "Quarter                        0\n",
+       "TaxiIn                         0\n",
+       "TaxiOut                        0\n",
+       "UniqueCarrier                  0\n",
+       "WheelsOff                      0\n",
+       "WheelsOn                       0\n",
+       "Year                           0\n",
+       "OriginVisibility         2882914\n",
+       "OriginWind               2882914\n",
+       "OriginPrecip             2882914\n",
+       "DestinationVisibility    2883781\n",
+       "DestinationWind          2883781\n",
+       "DestinationPrecip        2883781\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -515,16 +529,16 @@
        "WheelsOff                0\n",
        "WheelsOn                 0\n",
        "Year                     0\n",
-       "OriginVisibility         0\n",
-       "OriginWind               0\n",
-       "OriginPrecip             0\n",
+       "OriginVisibility         3\n",
+       "OriginWind               3\n",
+       "OriginPrecip             3\n",
        "DestinationVisibility    0\n",
        "DestinationWind          0\n",
        "DestinationPrecip        0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
