modify weather data

--- a/Project/2017_10_station_weather.ipynb
+++ b/Project/2017_10_station_weather.ipynb
@@ -281,7 +281,7 @@
     "    df2017[['Precip']] = df2017[['Precip']].astype(float)\n",
     "    df2017.insert(0, 'station',station_name)\n",
     "    df2017.insert(1, 'year',2017)\n",
-    "    list_.append(df)\n",
+    "    list_.append(df2017)\n",
     "frame2017 = pd.concat(list_)\n",
     "directory = os.path.dirname(os.getcwd()) \n",
     "newpath = directory+'/weatherdata'\n",
