adding the project

--- a/Project/Sonali/untitled folder/Models/Predictions/Random Forest.ipynb
+++ b/Project/Sonali/untitled folder/Models/Predictions/Random Forest.ipynb
@@ -34,30 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cur_path = '/Users/sonalichaudhari/Desktop/ADS_Project/Data'\n",
-    "df = pd.read_csv(open(cur_path+'/Data_for_Prediction.csv','rU'), encoding='utf-8')"
+    "cur_path = '/Users/madhu/Documents/NEU/Fall 2017/ADS Class/Final project/Data'\n",
+    "df = pd.read_csv(open(cur_path+'/T1.csv','rU'), encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1775152, 12)"
+       "(8198334, 26)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,21 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 79,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Year', 'Day', 'Month', 'Week', 'Origin', 'Dest', 'UniqueCarrier',\n",
-       "       'CRSArrTime', 'CRSDepTime', 'CRSElapsedTime', 'DepDelayMinutes',\n",
-       "       'OriginPrecip'],\n",
+       "Index(['FlightNum', 'Year', 'Day', 'Month', 'Week', 'Origin', 'Dest',\n",
+       "       'UniqueCarrier', 'Cancelled', 'DepTime', 'CRSArrTime', 'CRSDepTime',\n",
+       "       'DepDel15', 'CRSElapsedTime', 'DepDelayMinutes', 'OriginCityName',\n",
+       "       'DestCityName', 'Distance', 'Flight_Status', 'OriginVisibility',\n",
+       "       'OriginWind', 'OriginPrecip', 'CRSDep_hour', 'CRSDep_min',\n",
+       "       'CRSArr_hour', 'CRSArr_min'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,22 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 80,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "df = df.loc[df['Flight_Status'] == 1]\n",
+    "del df['DepDel15']\n",
+    "del df['Cancelled']\n",
+    "del df['CRSArrTime']\n",
+    "del df['CRSDepTime']\n",
     "cols = df.columns.tolist()\n",
-    "cols.remove('DepDelayMinutes')"
+    "cols.remove('DepDelayMinutes')\n",
+    "#flight# and dep_hour, dep_min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X= df[cols]\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -135,18 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "StratifiedKFold(n_splits=2, random_state=None, shuffle=False)\n",
-      "TRAIN: [ 172606  431106  449824 ..., 1775149 1775150 1775151] TEST: [      0       1       2 ..., 1700920 1715265 1727142]\n",
-      "TRAIN: [      0       1       2 ..., 1700920 1715265 1727142] TEST: [ 172606  431106  449824 ..., 1775149 1775150 1775151]\n"
+      "TRAIN: [ 190277  480550  482147 ..., 1913853 1913854 1913855] TEST: [      0       1       2 ..., 1822904 1839182 1852667]\n",
+      "TRAIN: [      0       1       2 ..., 1822904 1839182 1852667] TEST: [ 190277  480550  482147 ..., 1913853 1913854 1913855]\n"
      ]
     }
    ],
@@ -165,10 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 84,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
@@ -185,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -197,10 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 86,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -213,7 +208,7 @@
        "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,16 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.835188524979\n"
+      "0.997030387635\n"
      ]
     }
    ],
@@ -247,23 +240,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-----Train-----\n",
-      "RMS:  30.4525914346295\n",
-      "MAE:  16.9913112957\n",
+      "RMS:  4.045482177847338\n",
+      "MAE:  0.729591083115\n",
       "MAPE:  nan\n",
       "-----Test-----\n",
-      "RMS:  910.2465959109237\n",
-      "MAE:  854.207637028\n",
-      "MAPE:  inf\n"
+      "RMS:  1006.7676302496527\n",
+      "MAE:  920.163140426\n",
+      "MAPE:  nan\n",
+      "50.2996641128\n",
+      "50.7835158809\n"
      ]
     }
    ],
@@ -291,7 +284,9 @@
     "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
-    "print('MAPE: ',mape_test)"
+    "print('MAPE: ',mape_test)\n",
+    "print(np.mean(y_test))\n",
+    "print(np.mean(y_train))"
    ]
   },
   {
@@ -303,23 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.142172389191\n",
+      "Accuracy:  0.273827301856\n",
       "-----Train-----\n",
-      "RMS:  69.47531796868368\n",
-      "MAE:  41.7706579528\n",
+      "RMS:  63.261628751514685\n",
+      "MAE:  33.7759118779\n",
       "MAPE:  inf\n",
       "-----Test-----\n",
-      "RMS:  905.3478437116665\n",
-      "MAE:  852.923249558\n",
+      "RMS:  925.8119586564941\n",
+      "MAE:  864.502495519\n",
       "MAPE:  inf\n"
      ]
     }
@@ -360,23 +353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.141415810194\n",
+      "Accuracy:  0.273607392557\n",
       "-----Train-----\n",
-      "RMS:  69.50594882092838\n",
-      "MAE:  41.7912393634\n",
+      "RMS:  63.27120689139998\n",
+      "MAE:  33.8017766672\n",
       "MAPE:  inf\n",
       "-----Test-----\n",
-      "RMS:  910.4876367357662\n",
-      "MAE:  856.197861666\n",
+      "RMS:  918.7910996747489\n",
+      "MAE:  858.24387561\n",
       "MAPE:  inf\n"
      ]
     }
@@ -417,23 +408,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.782598092562\n",
+      "Accuracy:  0.996594661028\n",
       "-----Train-----\n",
-      "RMS:  34.97536116456667\n",
-      "MAE:  18.1226963817\n",
+      "RMS:  4.332121067536567\n",
+      "MAE:  0.362173020574\n",
       "MAPE:  nan\n",
       "-----Test-----\n",
-      "RMS:  920.1918724142697\n",
-      "MAE:  860.129959537\n",
+      "RMS:  1043.053600946489\n",
+      "MAE:  955.71444127\n",
       "MAPE:  nan\n"
      ]
     }
@@ -474,24 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.860333760224\n",
+      "Accuracy:  0.998324451659\n",
       "-----Train-----\n",
-      "RMS:  28.03343093634301\n",
-      "MAE:  16.1833331137\n",
+      "RMS:  3.0387774280295874\n",
+      "MAE:  0.274792355464\n",
       "MAPE:  nan\n",
       "-----Test-----\n",
-      "RMS:  915.9483965864857\n",
-      "MAE:  860.13464006\n",
-      "MAPE:  inf\n"
+      "RMS:  985.8343566088611\n",
+      "MAE:  904.922775936\n",
+      "MAPE:  nan\n"
      ]
     }
    ],
@@ -531,24 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.258618351038\n",
+      "Accuracy:  0.972629831365\n",
       "-----Train-----\n",
-      "RMS:  64.58794231354298\n",
-      "MAE:  37.8947707695\n",
-      "MAPE:  inf\n",
+      "RMS:  12.281718737713176\n",
+      "MAE:  1.54059264864\n",
+      "MAPE:  nan\n",
       "-----Test-----\n",
-      "RMS:  893.3725071188924\n",
-      "MAE:  845.688813911\n",
-      "MAPE:  inf\n"
+      "RMS:  850.820650032249\n",
+      "MAE:  794.696520404\n",
+      "MAPE:  nan\n"
      ]
     }
    ],
@@ -589,9 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -656,9 +639,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -670,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
